--- a/backend/.github/workflows/ci-cd.yml
+++ b/backend/.github/workflows/ci-cd.yml
@@ -34,5 +34,6 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
+        file: backend/Dockerfile
         push: true
         tags: gabrielaschubert/backend:latest
