--- a/backend/.github/workflows/ci-cd.yml
+++ b/backend/.github/workflows/ci-cd.yml
@@ -34,6 +34,6 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: backend/Dockerfile
+        file: ./Dockerfile.backend
         push: true
         tags: gabrielaschubert/backend:latest
